--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,6 @@ Description: More about what it does (maybe more than one line)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.1.1
+Imports:
+    RMariaDB
