--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,23 @@ S3method(close_conn,MariaDBConnection)
 S3method(close_conn,default)
 S3method(select_all,MariaDBConnection)
 export(close_conn)
+export(get_bacon_median_quantile)
 export(is.MariaDBConnection)
 export(open_conn_mysql)
+export(runBacon)
 export(select_all)
 export(select_query_mysql)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
+importFrom(graphics,abline)
+importFrom(graphics,arrows)
+importFrom(graphics,lines)
+importFrom(graphics,matplot)
+importFrom(graphics,points)
+importFrom(stats,lm)
+importFrom(stats,median)
+importFrom(stats,quantile)
+importFrom(utils,read.csv)
+importFrom(utils,read.table)
+importFrom(utils,write.csv)
+importFrom(utils,write.table)
