--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(get_bacon_median_quantile)
 export(is.MariaDBConnection)
 export(open_conn_mysql)
 export(runBacon)
+export(runLinReg)
 export(select_all)
 export(select_query_mysql)
 importFrom(grDevices,dev.off)
