--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(runBacon)
 export(runLinReg)
 export(select_all)
 export(select_query_mysql)
+importFrom(dplyr,`%>%`)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(graphics,abline)
@@ -18,6 +19,8 @@ importFrom(graphics,arrows)
 importFrom(graphics,lines)
 importFrom(graphics,matplot)
 importFrom(graphics,points)
+importFrom(stats,approx)
+importFrom(stats,lag)
 importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,quantile)
