--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ importFrom(stats,lag)
 importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,quantile)
+importFrom(stats,rnorm)
 importFrom(utils,read.csv)
 importFrom(utils,read.table)
 importFrom(utils,write.csv)
