--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,18 @@
 S3method(close_conn,MariaDBConnection)
 S3method(close_conn,default)
 S3method(select_all,MariaDBConnection)
+export(add_hiatus)
 export(close_conn)
 export(get_bacon_median_quantile)
+export(get_lin_interp)
+export(get_median_quantiles)
 export(is.MariaDBConnection)
+export(lin_reg_ages)
+export(lin_reg_no_hiatus)
+export(linear_regression)
+export(mc_ensemble)
+export(mc_linInt)
+export(mc_linReg)
 export(open_conn_mysql)
 export(runBacon)
 export(runLinReg)
