--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method(close_conn,MariaDBConnection)
 S3method(close_conn,default)
 S3method(select_all,MariaDBConnection)
 export(close_conn)
+export(create_input)
+export(file_structure)
 export(open_conn_mysql)
 export(runBacon)
 export(runLinReg)
