--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,11 @@
 S3method(close_conn,MariaDBConnection)
 S3method(close_conn,default)
 S3method(select_all,MariaDBConnection)
+export(Bacon)
 export(close_conn)
 export(create_input)
 export(file_structure)
 export(open_conn_mysql)
-export(runBacon)
 export(runLinReg)
 export(select_all)
 export(select_query_mysql)
