--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(runLinReg)
 export(select_all)
 export(select_query_mysql)
 importFrom(dplyr,`%>%`)
+importFrom(foreach,`%do%`)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(graphics,abline)
