--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(select_all)
 export(select_query_mysql)
 importFrom(dplyr,`%>%`)
 importFrom(foreach,`%do%`)
+importFrom(foreach,`%dopar%`)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(graphics,abline)
