--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(close_conn)
 export(create_input)
 export(file_structure)
 export(open_conn_mysql)
+export(plot_abc)
 export(plot_acc)
 export(runLinReg)
 export(select_all)
