--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(close_conn,MariaDBConnection)
 S3method(close_conn,default)
 S3method(select_all,MariaDBConnection)
 export(Bacon)
+export(bacon_qc)
 export(close_conn)
 export(create_input)
 export(file_structure)
