--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,11 +21,14 @@ importFrom(graphics,lines)
 importFrom(graphics,matplot)
 importFrom(graphics,points)
 importFrom(stats,approx)
+importFrom(stats,density)
+importFrom(stats,dgamma)
 importFrom(stats,lag)
 importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(stats,rnorm)
+importFrom(stats,var)
 importFrom(utils,read.csv)
 importFrom(utils,read.table)
 importFrom(utils,write.csv)
