--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,8 @@ Imports:
     progress,
     rbacon,
     RMariaDB,
-    scales
+    scales,
+    SimDesign
 Remotes:
     special-uor/dabr
 Suggests:
