--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(runLinReg)
 importFrom(dplyr,`%>%`)
 importFrom(foreach,"%dopar%")
 importFrom(grDevices,dev.off)
+importFrom(grDevices,grey)
 importFrom(grDevices,pdf)
 importFrom(graphics,abline)
 importFrom(graphics,arrows)
