--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,10 +20,10 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
-URL: https://github.com/special-uor/ageR, 
-     https://special-uor.github.io/ageR,
-     https://research.reading.ac.uk/palaeoclimate
-BugReports: https://github.com/special-uor/ageR/issues
+URL: https://github.com/special-uor/ageR/, 
+     https://special-uor.github.io/ageR/,
+     https://research.reading.ac.uk/palaeoclimate/
+BugReports: https://github.com/special-uor/ageR/issues/
 Language: en-GB
 Imports:
     coda,
