--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,5 +26,7 @@ importFrom(stats,rnorm)
 importFrom(stats,var)
 importFrom(utils,read.csv)
 importFrom(utils,read.table)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
 importFrom(utils,write.csv)
 importFrom(utils,write.table)
