--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(create_input)
 export(file_structure)
 export(mix_curves)
 export(runLinReg)
+export(zip_files)
 importFrom(dplyr,`%>%`)
 importFrom(foreach,"%dopar%")
 importFrom(grDevices,dev.off)
@@ -28,3 +29,4 @@ importFrom(utils,read.csv)
 importFrom(utils,read.table)
 importFrom(utils,write.csv)
 importFrom(utils,write.table)
+importFrom(utils,zip)
