Add imports to doFuture, future, and progressr

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,15 +29,17 @@ Imports:
     coda,
     data.tree,
     DiagrammeR,
-    doSNOW,
+    doFuture
     dplyr,
     foreach,
+    future,
     ggplot2,
     gridExtra,
     IntCal,
     parallel,
     plyr,
     progress,
+    progressr,
     rbacon,
     R.utils,
     scales,
