--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(Bacon)
 export(create_input)
 export(file_structure)
 export(mix_curves)
+export(pb)
 export(runLinReg)
 export(zip_files)
 importFrom(dplyr,`%>%`)
@@ -25,6 +26,7 @@ importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(stats,rnorm)
 importFrom(stats,var)
+importFrom(utils,capture.output)
 importFrom(utils,read.csv)
 importFrom(utils,read.table)
 importFrom(utils,write.csv)
