--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -14,6 +14,12 @@ reference:
   - create_input
   - file_structure
 
+- title: "Utils"
+  desc: >
+    Utilitary functions
+- contents:
+  - pb
+  - zip_files
 # - title: "Plotting functions"
 #   desc: >
 #     Internal functions to generate plots of the age models
