--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,9 +11,11 @@ export(runLinReg)
 export(zip_files)
 importFrom(dplyr,`%>%`)
 importFrom(foreach,"%dopar%")
+importFrom(grDevices,dev.control)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,grey)
 importFrom(grDevices,pdf)
+importFrom(grDevices,recordPlot)
 importFrom(graphics,abline)
 importFrom(graphics,arrows)
 importFrom(graphics,lines)
