--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ageR
 Type: Package
 Title: Supervised Age Modelling
-Version: 0.1.0.900
+Version: 0.2.0.900
 Authors@R: c(
     person(given = "Roberto",
            family = "Villegas-Diaz",
@@ -13,6 +13,11 @@ Authors@R: c(
            role = c("aut"),
            email = "e.cruz-silva@pgr.reading.ac.uk",
            comment = c(ORCID = "0000-0003-2906-9290")),
+    person(given = "Sandy P.",
+           family = "Harrison",
+           role = "aut",
+           email = "s.p.harrison@reading.ac.uk",
+           comment = c(ORCID = "0000-0001-5687-1903")),
     person("SPECIAL Research Group @ University of Reading", role = c("cph")))
 Description: Provides functions to facilitate the creation of age models using 
     different data sources, including databases, comma and tab separated files.
