Add tidy dependencies for package maintenance

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,7 +59,12 @@ Imports:
     stringi,
     stringr,
     tibble,
-    tictoc
+    tictoc,
+    rlang,
+    lifecycle,
+    cli,
+    glue,
+    withr
 Suggests:
     badger,
     dabr,
