--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,10 @@ export(mix_curves)
 export(pb)
 export(runLinReg)
 export(zip_files)
+import(rlang)
 importFrom(dplyr,`%>%`)
 importFrom(foreach,"%dopar%")
+importFrom(glue,glue)
 importFrom(grDevices,dev.control)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,grey)
@@ -21,6 +23,7 @@ importFrom(graphics,arrows)
 importFrom(graphics,lines)
 importFrom(graphics,matplot)
 importFrom(graphics,points)
+importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(stats,approx)
 importFrom(stats,approxfun)
