--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,40 +31,40 @@ URL: https://github.com/special-uor/ageR/,
 BugReports: https://github.com/special-uor/ageR/issues/
 Language: en-GB
 Imports:
-    coda,
-    cowplot,
-    data.tree,
-    DiagrammeR,
-    doFuture,
-    dplyr,
-    foreach,
-    furrr,
-    future,
-    ggplot2,
-    gridExtra,
-    gridGraphics,
-    IntCal (>= 0.3.0),
-    magrittr,
+    coda (>= 0.19-4.1),
+    cowplot (>= 1.1.3),
+    data.tree (>= 1.1.0),
+    DiagrammeR (>= 1.0.11),
+    doFuture (>= 1.0.1),
+    dplyr (>= 1.1.4),
+    foreach (>= 1.5.2),
+    furrr (>= 0.3.1),
+    future (>= 1.33.2),
+    ggplot2 (>= 3.5.1),
+    gridExtra (>= 2.3),
+    gridGraphics (>= 0.5-1),
+    IntCal (>= 0.3.1),
+    magrittr (>= 2.0.3),
     parallel,
-    plyr,
-    progress,
-    progressr,
-    purrr,
-    rbacon (>= 2.5.7),
-    readr,
-    RColorBrewer,
-    R.utils,
-    scales,
-    SimDesign,
-    stringi,
-    stringr,
-    tibble,
-    tictoc,
-    rlang,
-    lifecycle,
-    cli,
-    glue,
-    withr
+    plyr (>= 1.8.9),
+    progress (>= 1.2.3),
+    progressr (>= 0.14.0),
+    purrr (>= 1.0.2),
+    rbacon (>= 3.2.0),
+    readr (>= 2.1.5),
+    RColorBrewer (>= 1.1-3),
+    R.utils (>= 2.12.3),
+    scales (>= 1.3.0),
+    SimDesign (>= 2.15.1),
+    stringi (>= 1.8.4),
+    stringr (>= 1.5.1),
+    tibble (>= 3.2.1),
+    tictoc (>= 1.2.1),
+    rlang (>= 1.1.4),
+    lifecycle (>= 1.0.4),
+    cli (>= 3.6.3),
+    glue (>= 1.7.0),
+    withr (>= 3.0.0)
 Suggests:
     badger,
     dabr,
