--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,6 @@ Description: Provides functions to facilitate the creation of age models using
     different data sources, including databases, comma and tab separated files.
 License: GPL-3
 Encoding: UTF-8
-LazyData: true
 RoxygenNote: 7.3.2
 URL: https://github.com/special-uor/ageR/, 
      https://special-uor.github.io/ageR/,
@@ -34,7 +33,6 @@ Imports:
     coda (>= 0.19-4.1),
     cowplot (>= 1.1.3),
     data.tree (>= 1.1.0),
-    DiagrammeR (>= 1.0.11),
     doFuture (>= 1.0.1),
     dplyr (>= 1.1.4),
     foreach (>= 1.5.2),
@@ -42,7 +40,6 @@ Imports:
     future (>= 1.33.2),
     ggplot2 (>= 3.5.1),
     gridExtra (>= 2.3),
-    gridGraphics (>= 0.5-1),
     IntCal (>= 0.3.1),
     magrittr (>= 2.0.3),
     parallel,
@@ -52,21 +49,14 @@ Imports:
     purrr (>= 1.0.2),
     rbacon (>= 3.2.0),
     readr (>= 2.1.5),
-    RColorBrewer (>= 1.1-3),
     R.utils (>= 2.12.3),
     scales (>= 1.3.0),
     SimDesign (>= 2.15.1),
     stringi (>= 1.8.4),
     stringr (>= 1.5.1),
     tibble (>= 3.2.1),
-    tictoc (>= 1.2.1),
-    rlang (>= 1.1.4),
-    lifecycle (>= 1.0.4),
-    cli (>= 3.6.3),
-    glue (>= 1.7.0),
-    withr (>= 3.0.0)
+    tictoc (>= 1.2.1)
 Suggests:
-    badger,
     dabr,
     knitr,
     testthat
